manifests-failed/sidecar-injector-0.24.1.tgz-manifest.yaml
---
# Source: sidecar-injector/templates/controlnode.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-controlnode
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 7946
      targetPort: 7946
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
---
# Source: sidecar-injector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-sidecar-injector
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
---
# Source: sidecar-injector/templates/controlnode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-controlnode
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: "controlnode"
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sidecar-injector
      app.kubernetes.io/instance: "controlnode"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sidecar-injector
        app.kubernetes.io/instance: "controlnode"
    spec:
      serviceAccountName: my-release-sidecar-injector
      securityContext:
        {}
      containers:
        - name:  controlnode
          securityContext:
            {}
          image: "impartsecurity/control-node:0.24.0"
          imagePullPolicy: IfNotPresent
          args:
          - --gossip_port=7946
          resources:
            {}
          volumeMounts: []
      volumes: []
---
# Source: sidecar-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-sidecar-injector
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  priorityClassName: 
  selector:
    matchLabels:
      app.kubernetes.io/name: sidecar-injector
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/webhook-tls-config: 18f9da3c91d4285e3b22a7b5b57dd731f30790aa3a05c9ffb8b29270d0b45b60
        checksum/webhook-tls-config-c: 264a2bf0e76c83e466c6da2438c422cc11a3aea2ff743edf096efc06af994d9d
        checksum/webhook-tls-config-k: bd4b4b1148c287c2ad2e531f9f30f57924839e8a03ee16f6afdcd59f23026016
        checksum/values: bb824ff1b0e675ef3038e44f339d43f83b32204b909b4ad2c2024d902826e51b
        checksum/webhook-sidecar-config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: sidecar-injector
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-sidecar-injector
      securityContext:
        {}
      containers:
        - name: sidecar-injector
          securityContext:
            {}
          image: "impartsecurity/k8s-webhook-injector:0.24.0"
          imagePullPolicy: IfNotPresent
          args:
          - --sidecar-config-file=/etc/webhook/config/sidecarconfig.yaml
          - --tls-cert-file=/etc/webhook/certs/tls.crt
          - --tls-private-key-file=/etc/webhook/certs/tls.key
          resources:
            {}
          volumeMounts:
          - mountPath: /etc/webhook/config
            name: webhook-config
          - name: certs
            mountPath: /etc/webhook/certs
            readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: my-release-sidecar-injector-webhook-tls
      - configMap:
          name: my-release-sidecar-injector
        name: webhook-config
---
# Source: sidecar-injector/templates/deployment.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-sidecar-injector
webhooks:
  - name: my-release-sidecar-injector.impart.security
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: my-release-sidecar-injector
        namespace: sidecar-injector-0.24.1.tgz
        path: /inject
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQVENDQWlXZ0F3SUJBZ0lRUWdhS0k4WTdlTUV0QWtPTC9ZdkVxekFOQmdrcWhraUc5dzBCQVFzRkFEQXAKTVNjd0pRWURWUVFERXg1emFXUmxZMkZ5TFdsdWFtVmpkRzl5TFRBdU1qUXVNUzUwWjNvdFkyRXdIaGNOTWpRdwpOakl3TVRRMU9EUXpXaGNOTXpRd05qRTRNVFExT0RReldqQXBNU2N3SlFZRFZRUURFeDV6YVdSbFkyRnlMV2x1CmFtVmpkRzl5TFRBdU1qUXVNUzUwWjNvdFkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQzA0UVh0SGtYdU5KYTlLMFAwTnRocWRjcU4vc0xmTHZiZ0pHYi9GYzhYMElFRHBDU3ZkWGhWZ25KcApQQmEzaFVNeFhQ [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources:
          - pods
    failurePolicy: Fail
    sideEffects: None
    objectSelector:
      matchLabels:
        impart-inspector-injection: enabled
---
# Source: sidecar-injector/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-sidecar-injector-test-connection"
  labels:
    helm.sh/chart: sidecar-injector-0.24.1
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.24.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: nc
      image: busybox
      command: ['sh', '-c']
      args:
        - "nc -zvw 5 my-release-sidecar-injector 443"
  restartPolicy: Never
